--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "ussignal-webex",
-  "main": "index.js",
-  "compatibility_date": "2026-02-07",
+  "main": "./index.js",
+  "compatibility_date": "2025-02-07",
   "logpush": true
 }
