--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,11 @@
 {
   "name": "ussignal-webex",
-  "main": "./worker.js",
-  "compatibility_date": "2025-02-07"
+  "main": "index.js",
+  "compatibility_date": "2025-02-07",
+  "routes": [
+    {
+      "pattern": "ussignal-webex.onenecklab.com/*",
+      "zone_name": "onenecklab.com"
+    }
+  ]
 }
