--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,20 +14,21 @@
     {
       "binding": "WEBEX",
       "id": "2da71736311d433b9c2b05a7ba080eb3"
-        },
-{
+    },
+    {
       "binding": "ORG_MAP_KV",
       "id": "0d31d4b7594345a8b881f675130aa312"
-        },
-{
+    },
+    {
       "binding": "USER_SESSION_KV",
       "id": "bf8036e6723141c7b78b61741f9eee6d"
     }
   ],
 
-  "vars": [ 
-{
-    "SEED_DISABLED": "true"
+  "vars": {
+    "SEED_DISABLED": "true",
+    "LICENSE_REPORT_FROM": "no-ussignal-reply@onenecklab.com",
+    "ADMIN_EMAILS": "ahmed.adeyemi@ussignal.com,dld-test-customercare@ussignal.com,alerts@ussignal.com",
+    "PORTAL_ENV": "production"
   }
-]
 }
