--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,6 +28,7 @@
   "vars": {
     "SEED_DISABLED": "true",
     "LICENSE_REPORT_FROM": "no-ussignal-reply@onenecklab.com",
+    "BREVO_SENDER_EMAIL": "no-ussignal-reply@onenecklab.com",
     "ADMIN_EMAILS": "ahmed.adeyemi@ussignal.com,dld-test-customercare@ussignal.com,alerts@ussignal.com",
     "PORTAL_ENV": "production"
   }
